--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио — Румянцев</title>
-    <!-- Современные стили, вдохновлённые Dribbble и Behance -->
+
+      <meta property="og:title" content="МЕТОДЫ И НОРМАТИВНАЯ БАЗА" />
+      <meta property="og:description" content="23 Федеральных Закона, 49 Статей УК РФ, 25 экспертиз, 14 симптомов, 10 синдромов." />
+      <meta name="twitter:title" content="МЕТОДЫ И НОРМАТИВНАЯ БАЗА" />
+      <meta name="twitter:description" content="Госизмена, Шпионаж, Терроризм" />
+      <meta property="og:image" content="msk11.jpg" />
+      <meta name="twitter:image" content="msk11.jpg" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <!--<link rel="stylesheet" href="css/style.css">-->
+
+    <!-- Современные стили -->
     <style>
         /* Основные стили страницы */
         body {
