--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио — Румянцев</title>
+    <title> Румянцев Георгий Теттевич | Резюме - Портфолио</title>
 
-      <meta property="og:title" content="МЕТОДЫ И НОРМАТИВНАЯ БАЗА" />
-      <meta property="og:description" content="23 Федеральных Закона, 49 Статей УК РФ, 25 экспертиз, 14 симптомов, 10 синдромов." />
-      <meta name="twitter:title" content="МЕТОДЫ И НОРМАТИВНАЯ БАЗА" />
-      <meta name="twitter:description" content="Госизмена, Шпионаж, Терроризм" />
-      <meta property="og:image" content="msk11.jpg" />
-      <meta name="twitter:image" content="msk11.jpg" />
+      <meta property="og:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
+      <meta property="og:description" content="Специалист - Румянцев Георгий Теттевич | " />
+      <meta name="twitter:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
+      <meta name="twitter:description" content="Румянцев Георгий Теттевич" />
+      <meta property="og:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
+      <meta name="twitter:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
       <meta name="twitter:card" content="summary_large_image" />
       <!--<link rel="stylesheet" href="css/style.css">-->
 
