--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -212,15 +212,33 @@
             </div>
             <!-- Проект 2 -->
             <div class="project">
-                <div class="project-title">МОСКВА — проект «ATOMIC HEART»</div>
-                <div class="project-desc">Презентации на высшем уровне государства, крупные проекты и мастер-классы в Москве, участие в проекте ATOMIC HEART.</div>
+                <div class="project-title">МОСКВА — проекты и Мастер Классы</div>
+                <div class="project-desc">Презентации на высшем уровне, проекты и мастер-классы в Москве.</div>
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
                     <img class="slider-img" src="msk1.jpg?text=Начальная стадия разработки" alt="Москва 1">
                     <div class="slider-caption">Начальная стадия разработки ATOMIC HEART</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
+                    <img class="slider-img" src="msk1.jpg?text=Виртуальные Лаборатории" alt="Москва 2">
+                    <div class="slider-caption">Виртуальные Лаборатории</div>
                     <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Москва+2" alt="Москва 2">
-                    <div class="slider-caption">Мастер-класс для студентов МГУ</div>
+                    <div class="slider-caption">Мастер-классы для студентов</div>
                     <button class="slider-btn right">&#8594;</button>
                 </div>
             </div>
