--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -276,7 +276,7 @@
         <!-- Образование -->
         <div class="education">
             <h2>Образование</h2>
-            <div><b>МИФИ</b> — Кафедра проблем экспериментальной физики (№59)</div>
+            <div>Национальный исследовательский ядерный университет <b>«МИФИ»</b> — Кафедра проблем экспериментальной физики (№59)</div>
             <div>Специальность: "Приборы и методы экспериментальной физики"</div>
             <!-- Слайдер для образования -->
             <div class="slider">
