--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -277,7 +277,7 @@
         <div class="education">
             <h2>Образование</h2>
             <div>Национальный исследовательский ядерный университет <b>«МИФИ»</b> — Кафедра проблем экспериментальной физики (№59)</div>
-            <div>Специальность: "Приборы и методы экспериментальной физики"</div>
+            <div><b>Специальность:</b> "Приборы и методы экспериментальной физики"</div>
             <!-- Слайдер для образования -->
             <div class="slider">
                 <button class="slider-btn left">&#8592;</button>
