--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -293,10 +293,13 @@
             </div>
         </div>
         <!-- Ссылки -->
+       <center>
         <div class="links">
             <a class="link" href="https://career.habr.com/egor-rumyantsev" target="_blank">Habr Карьера</a>
             <a class="link" href="https://github.com/CEPBEP" target="_blank">GitHub</a>
         </div>
+       </center>
+
     </div>
     <!-- Все комментарии и описания на русском языке, как указано в требованиях -->
 </body>
