--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -251,8 +251,13 @@
                     <button class="slider-btn left">&#8592;</button>
                     <img class="slider-img" src="arctic1.jpg?text=Совместный+проект+с+МФТИ+и+РУСАК" alt="Арктика 1">
                     <div class="slider-caption">Совместный проект с МФТИ  («Московский физико-технический институт» (национальный исследовательский университет)) и RUSAK «Русская Автомобильная Компания»</div>
-                    <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
+                    <img class="slider-img" src="arctic2.jpg?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
                     <div class="slider-caption">Совместный проект с МФТИ</div>
+                    <img class="slider-img" src="arctic3.jpg?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
+                    <div class="slider-caption">Совместный проект с МФТИ</div>
+                    <img class="slider-img" src="arctic4.jpg?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
+                    <div class="slider-caption">Совместный проект с МФТИ</div>
+
                     <button class="slider-btn right">&#8594;</button>
                 </div>
             </div>
@@ -276,8 +281,8 @@
         <!-- Образование -->
         <div class="education">
             <h2>Образование</h2>
-            <div>Национальный исследовательский ядерный университет <b>«МИФИ»</b> — Кафедра проблем экспериментальной физики (№59)</div>
-            <div><b>Специальность:</b> "Приборы и методы экспериментальной физики"</div>
+            <div><b>Национальный исследовательский ядерный университет «МИФИ»</b> — Кафедра проблем экспериментальной физики (№59)</div>
+            <div><b>Специальность:</b> — "Приборы и методы экспериментальной физики"</div>
             <!-- Слайдер для образования -->
             <div class="slider">
                 <button class="slider-btn left">&#8592;</button>
