--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -178,7 +178,7 @@
         <h1>Румянцев Георгий Теттевич</h1>
         <!-- Фотография под именем -->
         <div style="display:flex; justify-content:center; margin-bottom:1.5em;">
-            <img src="5397632366530393540.jpg" alt="Фото Егора Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
+            <img src="AVA.jpg" alt="Фото Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
         </div>
         <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;">Портфолио — Резюме</div>
         <!-- Проекты -->
