--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -180,7 +180,7 @@
         <div style="display:flex; justify-content:center; margin-bottom:1.5em;">
             <img src="AVA.jpg" alt="Фото Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
         </div>
-        <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;">Портфолио — Резюме</div>
+        <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;">ПОРТФОЛИО / РЕЗЮМЕ</div>
         <!-- Проекты -->
         <h2>Проекты</h2>
         <div class="projects">
@@ -269,7 +269,7 @@
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
                     <img class="slider-img" src="af2.jpg?text=Совместный проект в сфере энергетики" alt="Африка 1">
-                    <div class="slider-caption">Совместный проект в сфере энергетики, 2024</div>
+                    <div class="slider-caption">Совместный проект в сфере энергетики и BlockChain</div>
                     <img class="slider-img" src="af3.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
                     <div class="slider-caption">Проект</div>
                     <img class="slider-img" src="af4.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
