--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -186,7 +186,7 @@
         <div class="projects">
             <!-- Проект 1 -->
             <div class="project">
-                <div class="project-title">СОЧИ — «Сириус» Мастер Классы</div>
+                <div class="project-title">«Сириус» Мастер Классы</div>
                 <div class="project-desc">Организация и проведение мастер-классов в Сочи и на Дальнем Востоке. Современные образовательные форматы и интерактивные мероприятия.</div>
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
