--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -187,7 +187,7 @@
             <!-- Проект 1 -->
             <div class="project">
                 <div class="project-title">«Сириус» Мастер Классы</div>
-                <div class="project-desc">Организация и проведение мастер-классов в Сочи и на Дальнем Востоке. Современные образовательные форматы и интерактивные мероприятия.</div>
+                <div class="project-desc">Организация и проведение мастер-классов от Сочи до Дальнего Востока. <br> Современные образовательные форматы и интерактивные мероприятия.</div>
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
@@ -212,7 +212,7 @@
             </div>
             <!-- Проект 2 -->
             <div class="project">
-                <div class="project-title">МОСКВА — проекты и Мастер Классы</div>
+                <div class="project-title">МОСКВА — проекты</div>
                 <div class="project-desc">Презентации на высшем уровне, проекты и мастер-классы в Москве.</div>
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
