--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -245,7 +245,7 @@
             <!-- Проект 3 -->
             <div class="project">
                 <div class="project-title">АРКТИКА И ДАЛЬНИЙ ВОСТОК</div>
-                <div class="project-desc">Сотрудничество с коммерческими предприятиями, МФТИ, НИИ. Презентации на высшем уровне государства, проекты и мастер-классы.</div>
+                <div class="project-desc">Сотрудничество с коммерческими предприятиями, МФТИ, НИИ. Презентации на высшем уровне, проекты и мастер-классы.</div>
                 <!-- Слайдер для Арктики -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
