--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -269,7 +269,7 @@
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
                     <img class="slider-img" src="af2.jpg?text=Совместный проект в сфере энергетики" alt="Африка 1">
-                    <div class="slider-caption">Совместный проект в сфере энергетики, BlockChain и Смарт Контрактов.</div>
+                    <div class="slider-caption">Совместный проект в сфере Логистики, Энергетики, Блокчейн и Смарт Контрактов.</div>
                     <img class="slider-img" src="af3.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
                     <div class="slider-caption">Проект</div>
                     <img class="slider-img" src="af4.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
