--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Румянцев Георгий Теттевич | Резюме - Портфолио</title>
 
-      <meta property="og:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
-      <meta property="og:description" content="Специалист - Румянцев Георгий Теттевич | " />
-      <meta name="twitter:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
-      <meta name="twitter:description" content="Румянцев Георгий Теттевич" />
-      <meta property="og:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
-      <meta name="twitter:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
-      <meta name="twitter:card" content="summary_large_image" />
+<!-- Open Graph Protocol (Facebook, LinkedIn, etc.) -->
+<meta property="og:type" content="profile" /> <!-- Added missing required OG type -->
+<meta property="og:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
+<meta property="og:description" content="Специалист - Румянцев Георгий Теттевич" />
+<meta property="og:url" content="" /> <!-- ADD YOUR FULL URL HERE -->
+<meta property="og:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
+<meta property="og:image:alt" content="Специалист - Румянцев Георгий Теттевич" /> <!-- ADD IMAGE DESCRIPTION HERE -->
+<meta property="og:site_name" content="РЕЗЮМЕ / ПОРТФОЛИО" /> <!-- ADD WEBSITE NAME HERE -->
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="РЕЗЮМЕ - ПОРТФОЛИО" />
+<meta name="twitter:description" content="Румянцев Георгий Теттевич" />
+<meta name="twitter:image" content="https://cepbep.github.io/portfolio/msk11.jpg" />
+<meta name="twitter:image:alt" content="Специалист - Румянцев Георгий Теттевич" /> <!-- ADD IMAGE DESCRIPTION HERE -->
+<meta name="twitter:site" content="РЕЗЮМЕ / ПОРТФОЛИО" /> <!-- ADD TWITTER HANDLE HERE -->
       <!--<link rel="stylesheet" href="css/style.css">-->
 
     <!-- Современные стили -->
