--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -311,6 +311,7 @@
         <div class="links">
             <a class="link" href="https://career.habr.com/egor-rumyantsev" target="_blank">Habr Карьера</a>
             <a class="link" href="https://github.com/CEPBEP" target="_blank">GitHub</a>
+            <a class="link" href="https://t.me/TheCodeOfCulture" target="_blank">Telegram</a>
         </div>
        </center>
 
