--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -184,12 +184,14 @@
 <body>
     <div class="container">
         <!-- Заголовок -->
+<center>
         <h1>Румянцев Георгий Теттевич</h1>
+</center>
         <!-- Фотография под именем -->
         <div style="display:flex; justify-content:center; margin-bottom:1.5em;">
             <img src="AVA.jpg" alt="Фото Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
         </div>
-        <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;">ПОРТФОЛИО / РЕЗЮМЕ</div>
+        <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;font-weight: 900;">ПОРТФОЛИО / РЕЗЮМЕ</div>
         <!-- Проекты -->
         <h2>Проекты</h2>
         <div class="projects">
