--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -197,7 +197,7 @@
         <div class="projects">
             <!-- Проект 1 -->
             <div class="project">
-                <div class="project-title">«Сириус» Мастер Классы</div>
+                <div class="project-title">«СИРИУС» Мастер Классы</div>
                 <div class="project-desc">Организация и проведение мастер-классов от Сочи до Дальнего Востока. <br> Современные образовательные форматы и интерактивные мероприятия.</div>
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
