--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -193,7 +193,7 @@
         </div>
         <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;font-weight: 900;">ПОРТФОЛИО / РЕЗЮМЕ</div>
         <!-- Проекты -->
-        <h2>Проекты</h2>
+        <h2>ПРОЕКТЫ И МАСТЕР-КЛАССЫ</h2>
         <div class="projects">
             <!-- Проект 1 -->
             <div class="project">
