--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -197,7 +197,7 @@
         <div class="projects">
             <!-- Проект 1 -->
             <div class="project">
-                <div class="project-title">«СИРИУС» Мастер Классы</div>
+                <div class="project-title">«СИРИУС» Мастер-Классы</div>
                 <div class="project-desc">Организация и проведение мастер-классов от Сочи до Дальнего Востока. <br> Современные образовательные форматы и интерактивные мероприятия.</div>
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
@@ -223,7 +223,7 @@
             </div>
             <!-- Проект 2 -->
             <div class="project">
-                <div class="project-title">МОСКВА — проекты</div>
+                <div class="project-title">МОСКВА — Проекты</div>
                 <div class="project-desc">Презентации на высшем уровне, проекты и мастер-классы в Москве.</div>
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
