--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,7 +78,7 @@
         }
         .project-desc {
             font-size: 1rem;
-            color: #e0e0e0;
+            color: #fff;
         }
         .education {
             margin-top: 2em;
