--- a/showcase/ue/hand.html
+++ b/showcase/ue/hand.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>3D Metamask-style + SVG cursor + GIF particles effect</title>
+<title>Portal Gun</title>
 <style>
   /* --- Обязательное: скрыть системный курсор по всей странице --- */
   body { cursor: none; margin: 0; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
