--- a/showcase/ue/portal_gunn.html
+++ b/showcase/ue/portal_gunn.html
@@ -4,17 +4,18 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Portal_Gunn</title>
+      <meta property="og:title" content="Поиск и внедрение мутаций у фитосейулюсов" />
+      <meta property="og:description" content="Поиск и внедрение мутаций у фитосейулюсов" />
+      <meta name="twitter:title" content="Поиск и внедрение мутаций у фитосейулюсов" />
+      <meta name="twitter:description" content="Поиск и внедрение мутаций у фитосейулюсов" />
+      <meta property="og:image" content="https://mcxa.github.io/img/rm.jpg" />
+      <meta name="twitter:image" content="https://mcxa.github.io/img/rm.jpg" />
+      <meta name="twitter:card" content="summary_large_image" />
 <style>
   /* Скрываем системный курсор по всей странице */
   body { cursor: none; margin: 0; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
 
-  :root {
-    --size: 340px;
-    --perspective: 900px;
-    --max-tilt: 22deg;
-    --transition: 0.12s;
-    --cursor-size: 92px;
-  }
+  :root {--size: 340px;--perspective: 900px;--max-tilt: 22deg;--transition: 0.12s;--cursor-size: 92px;}
 
   body {
     min-height: 100vh;
@@ -34,7 +35,7 @@
     display: grid;
     place-items: center;
     border-radius: 18px;
-    /*background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  /*background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
     box-shadow: 0 8px 30px rgba(3,8,20,0.6);*/
     padding: 22px;
   }
