--- a/showcase/ue/portal_gunn.html
+++ b/showcase/ue/portal_gunn.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Portal_Gunn</title>
-      <meta property="og:title" content="Поиск и внедрение мутаций у фитосейулюсов" />
-      <meta property="og:description" content="Поиск и внедрение мутаций у фитосейулюсов" />
-      <meta name="twitter:title" content="Поиск и внедрение мутаций у фитосейулюсов" />
-      <meta name="twitter:description" content="Поиск и внедрение мутаций у фитосейулюсов" />
+      <meta property="og:title" content="Портальная Пушка" />
+      <meta property="og:description" content="Портальная Пушка" />
+      <meta name="twitter:title" content="Портальная Пушка" />
+      <meta name="twitter:description" content="Портальная Пушка" />
       <meta property="og:image" content="https://mcxa.github.io/img/rm.jpg" />
       <meta name="twitter:image" content="https://mcxa.github.io/img/rm.jpg" />
       <meta name="twitter:card" content="summary_large_image" />
