--- a/showcase/ue/portal_gunn.html
+++ b/showcase/ue/portal_gunn.html
@@ -8,8 +8,8 @@
       <meta property="og:description" content="Портальная Пушка" />
       <meta name="twitter:title" content="Портальная Пушка" />
       <meta name="twitter:description" content="Портальная Пушка" />
-      <meta property="og:image" content="https://mcxa.github.io/img/rm.jpg" />
-      <meta name="twitter:image" content="https://mcxa.github.io/img/rm.jpg" />
+      <meta property="og:image" content="https://humanphenotype.github.io/img/rm.jpg" />
+      <meta name="twitter:image" content="https://humanphenotype.github.io/img/rm.jpg" />
       <meta name="twitter:card" content="summary_large_image" />
 <style>
   :root { --size: 340px; --perspective: 900px; --max-tilt: 22deg; --transition: 0.12s; --cursor-size: 92px; }
