--- a/showcase/ue/portal_gunn.html
+++ b/showcase/ue/portal_gunn.html
@@ -39,9 +39,7 @@
 
   /* Прячем системный курсор — используем кастомный */
   body { cursor: none; margin: 0; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
-  body{
-    min-height:100vh; display:grid; place-items:center; background: #020202; font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue"; color:#e6eef8; touch-action: manipulation;
-  }
+  body { min-height:100vh; display:grid; place-items:center; background: #020202; font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue"; color:#e6eef8; touch-action: manipulation; }
 
   .card{ width:var(--size); height:var(--size); display:grid; place-items:center; padding:22px; }
   .viewer{ width:100%; height:100%; perspective:var(--perspective); display:grid; place-items:center; cursor:none; }
