--- a/showcase/ue/prototype.html
+++ b/showcase/ue/prototype.html
@@ -55,7 +55,7 @@
     display:grid; place-items:center; user-select:none; opacity:1; backface-visibility:hidden;
     border-radius:50%;
   }
-  .cursor-icon svg{ width:100%; height:100%; display:block; transform-origin:50% 50%; transform-style: preserve-3d; }
+  .cursor-icon svg{ width:100%; height:100%; display:block; transform-origin:50% 50%; transform-style: preserve-3d; border-radius:50%;}
 
   /* Контейнер эффектов */
   .click-effect{ position: fixed; left:0; top:0; pointer-events:none; z-index:100005; }
