--- a/showcase/ue/prototype.html
+++ b/showcase/ue/prototype.html
@@ -49,23 +49,18 @@
   svg{ width:100%; height:100%; display:block; }
 
   /* Курсор — всегда виден */
-  .cursor-icon{
-    position: fixed; left:0; top:0; width:var(--cursor-size); height:var(--cursor-size);
-    pointer-events: none; transform: translate3d(-50%,-50%,0); transition: opacity 0.12s linear, transform 120ms linear; z-index:100010;
-    display:grid; place-items:center; user-select:none; opacity:1; backface-visibility:hidden;
-    border-radius:25%;
-  }
-  .cursor-icon svg{ width:100%; height:100%; display:block; transform-origin:50% 50%; transform-style: preserve-3d; border-radius:25%;}
+  .cursor-icon{ position: fixed; left:0; top:0; width:var(--cursor-size); height:var(--cursor-size);
+                pointer-events: none; transform: translate3d(-50%,-50%,0); transition: opacity 0.12s linear, transform 120ms linear; z-index:100010;
+                display:grid; place-items:center; user-select:none; opacity:1; backface-visibility:hidden; border-radius:35%; }
+  .cursor-icon svg{ width:100%; height:100%; display:block; transform-origin:50% 50%; transform-style: preserve-3d; border-radius:35%; }
 
   /* Контейнер эффектов */
   .click-effect{ position: fixed; left:0; top:0; pointer-events:none; z-index:100005; }
 
   /* Внешняя оболочка частицы — отвечает за движение (взрыв, сборка) и opacity */
-  .particle{
-    position:absolute; left:0; top:0; width:12px; height:12px; pointer-events:none; transform: translate3d(-50%,-50%,0) translate3d(0,0,0) scale(1);
-    opacity:0; will-change: transform, opacity; z-index:100020; /* частицы выше GIF */
-    transition: transform 700ms cubic-bezier(.16,.84,.35,1), opacity 420ms linear;
-  }
+  .particle{ position:absolute; left:0; top:0; width:12px; height:12px; pointer-events:none; transform: translate3d(-50%,-50%,0) translate3d(0,0,0) scale(1);
+             opacity:0; will-change: transform, opacity; z-index:100020; /* частицы выше GIF */
+             transition: transform 700ms cubic-bezier(.16,.84,.35,1), opacity 420ms linear; }
 
   /* Внутренняя часть частицы — визуал, отвечает за плавающую анимацию и мерцание */
   .particle-inner{ width:100%; height:100%; border-radius:50%; overflow:hidden; will-change: transform, opacity, filter; }
